fixed overflow for sidebar

--- a/laudio/media/style/sidebar.css
+++ b/laudio/media/style/sidebar.css
@@ -21,6 +21,7 @@
     background: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#aaa));
     border-right: 1px solid #aaa;
     overflow: hidden;
+    overflow-y: auto;
 }
 #sidebar hr {
     margin: 5px 0;
